# 404-team-not-found

./: .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements-dev.txt
.github/workflows/: lint.yml  release.yml  sync-wiki.yml  test.yml
db/: manager.py  schema.sql  seed.py
docs/: project-update-week9.md  project-update.md  working-agreement.md
docs/readme-history/: README1.md
docs/readme-histroy/: README1.md
scripts/: fk_check.py  init_db.py
service/: auth.py
session/: session.py
test/: test_auth.py  test_db.py  test_session.py
ui/: task_manager.py  welcome.py
